Overflow fix

--- a/Frontend/tree-planters/src/index.css
+++ b/Frontend/tree-planters/src/index.css
@@ -13,6 +13,7 @@ body {
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: 100% 100%;
+	overflow-x: hidden;
 }
 
 @font-face {
